fixes active nav-links on mobile

--- a/app/assets/stylesheets/_header.scss
+++ b/app/assets/stylesheets/_header.scss
@@ -113,7 +113,7 @@ $header-padding-vert: 40px;
 		text-shadow: none;
 	}
 	li{
-		width: 49%;
+		width: 50%;
 		display: inline-block;
 		border-bottom: solid 1px $white;
 		@media #{$tablet}{
